fixed migrations